fix : test for ceoncept with DateMiseAJour null
+ refactor tests